--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -64,15 +64,15 @@
             <div class="gnb2">
                 <div>
                     <ul class="lb">
-                        <li><a href="#">BIFF</a></li>
-                        <li><a href="#">영화제 가이드</a></li>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">수상후보작</a></li>
                     </ul>
 
                 </div>
                 <div>
                     <ul class="rb">
-                        <li><a href="#">프로그램</a></li>
-                        <li><a href="#">커뮤니티</a></li>
+                        <li><a href="#">우수출품작</a></li>
+                        <li><a href="#">상영시간표</a></li>
                     </ul>
 
                 </div>
@@ -169,7 +169,7 @@
                     <ul>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
-                                <img src="./img/c3ml1.jpeg" alt="">
+                                <img src="./img/01.jpg" alt="">
                                 <ol class="movtxt3">
                                     <li>뉴 커런츠상</li> <br>
                                     <li>&lt; 안녕, 내 고향&gt; </li> <br>
@@ -178,7 +178,7 @@
                             </a></li>
                         <li>
                             <a href="#" onclick="goMv('yFZh-Wqi7RI')">
-                                <img src="./img/ml6.png" alt="">
+                                <img src="./img/02.png" alt="">
                                 <ol class="movtxt3">
                                     <li>뉴 커런츠상</li> <br>
                                     <li>&lt; 안녕, 내 고향&gt; </li> <br>
@@ -188,7 +188,7 @@
                         </li>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
-                                <img src="./img/ml5.jpg" alt="">
+                                <img src="./img/03.jpg" alt="">
                                 <ol class="movtxt3">
                                     <li>뉴 커런츠상</li> <br>
                                     <li>&lt; 안녕, 내 고향&gt; </li> <br>
@@ -197,7 +197,7 @@
                             </a></li>
                         <li>
                             <a href="#" onclick="goMv('yFZh-Wqi7RI')">
-                                <img src="./img/ml6.png" alt="">
+                                <img src="./img/04.jpg" alt="">
                                 <ol class="movtxt3">
                                     <li>뉴 커런츠상</li> <br>
                                     <li>&lt; 안녕, 내 고향&gt; </li> <br>
@@ -219,7 +219,7 @@
                     <ul>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
-                                <img src="./img/c3ml1.jpeg" alt="">
+                                <img src="./img/05.jpg" alt="">
                                 <ol class="movtxt3">
                                     <li>뉴 커런츠상</li> <br>
                                     <li>&lt; 안녕, 내 고향&gt; </li> <br>
@@ -228,7 +228,7 @@
                             </a></li>
                         <li>
                             <a href="#" onclick="goMv('yFZh-Wqi7RI')">
-                                <img src="./img/ml6.png" alt="">
+                                <img src="./img/06.jpg" alt="">
                                 <ol class="movtxt3">
                                     <li>뉴 커런츠상</li> <br>
                                     <li>&lt; 안녕, 내 고향&gt; </li> <br>
@@ -238,7 +238,7 @@
                         </li>
                         <li>
                             <a href="#" onclick="goMv('KBT_YZdoF6g')">
-                                <img src="./img/ml5.jpg" alt="">
+                                <img src="./img/07.jpg" alt="">
                                 <ol class="movtxt3">
                                     <li>뉴 커런츠상</li> <br>
                                     <li>&lt; 안녕, 내 고향&gt; </li> <br>
@@ -247,7 +247,7 @@
                             </a></li>
                         <li>
                             <a href="#" onclick="goMv('yFZh-Wqi7RI')">
-                                <img src="./img/ml6.png" alt="">
+                                <img src="./img/08.jpg" alt="">
                                 <ol class="movtxt3">
                                     <li>뉴 커런츠상</li> <br>
                                     <li>&lt; 안녕, 내 고향&gt; </li> <br>
