--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="./img/Biff_logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./media.css">
-    <script src="./main.js"></script>
+    <script src="./sub1.css"></script>
 </head>
 <body>
     <!-- ******************************************* 상단 ******************************************* -->
@@ -86,7 +86,7 @@
     <div id="cont">
 
         <section class="cont1">
-            <video class="Mvideo" src="./img/BIFF2021_1080.mp4" autoplay muted loop></video>
+            <img class="subposter" src="./img/sub1m.jpg" alt="지옥포스터">
             <h1 id="gosub">
                 <a href="sub1.html">
                     <img src="./img/logo.gif" alt="BIFF로고">
@@ -98,11 +98,6 @@
         </section>
         <!-- /******************************************* cont2 *******************************************/ -->
     <!-- /******************************************* 하단 *******************************************/ -->
-    <!-- <div id="info">
-        <footer class="info ibx">
-
-        </footer>
-    </div> -->
     <footer id="ft" class="ft">
         <div class="footer_inner">
             <div class="container">
