--- a/001.HTML/008.VOGUE_PJ/002.site/login.html
+++ b/001.HTML/008.VOGUE_PJ/002.site/login.html
@@ -6,7 +6,7 @@
     <title>로그인 | 보그 코리아 (Vogue Korea)</title>    
     <link rel="shortcut icon" href="images/icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css">
-    <link rel="stylesheet" href="css/sub.css">
+    <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/media.css">
     <!-- 미디어쿼리를 본css하단에 link방식으로 넣어준다! -->
     <script src="js/linksys.js"></script>
@@ -218,7 +218,7 @@
         </header>
     </div>
     <!-- 2. 메인영역 -->
-    <div id="cont" class="bgc">
+    <div id="cont">
         <main class="cont ibx">
             <!-- 1. 서브페이지 탑영역 -->
              <header class="subtop">
@@ -240,6 +240,19 @@
                             <label for="mid">비밀번호</label>
                             <input type="password" name="mpw" id="mpw" maxlength="10" placeholder="비밀번호를 입력해주세요.">
                         </div>
+                        <!-- 버튼영역 -->
+                        <div class="btnbx">
+                            <input type="submit" id="sbtn" value="LOGIN">
+                        </div>
+                        <!-- 기타링크 -->
+                        <div class="addbx">
+                            <span>
+                                <input type="checkbox" id="chkbx" name="chkbx"> <label for="chkbx">아이디저장</label>
+                            </span>
+                            <a href="#">아이디찾기</a> | 
+                            <a href="#">비밀번호찾기</a> | 
+                            <a href="#">회원가입</a>
+                        </div>
                     </form>
                 </div>
 
@@ -247,7 +260,7 @@
         </main>
     </div>
     <!-- 3. 하단영역 -->
-    <div id="info" class="bgc">
+    <div id="info">
         <footer class="info ibx">
             <!-- 3-1.하단로고 -->
             <div class="blogo">
