--- a/001.HTML/008.VOGUE_PJ/002.site/login.html
+++ b/001.HTML/008.VOGUE_PJ/002.site/login.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="css/media.css">
     <!-- 미디어쿼리를 본css하단에 link방식으로 넣어준다! -->
     <script src="js/linksys.js"></script>
+
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/login.js"></script>
+    <!-- login.js는 순서중요! 제이쿼리쓰니까! -->
 </head>
 <body>
 
@@ -233,12 +238,12 @@
                         <!-- 아이디박스 -->
                         <div class="minput">
                             <label for="mid">아이디</label>
-                            <input type="text" name="mid" id="mid" maxlength="10" placeholder="아이디를 입력해주세요.">
+                            <input type="text" name="mid" id="mid" maxlength="10" placeholder="아이디를 입력해 주세요">
                         </div>
-                        <!-- 비번박스 -->
+                        <!-- 비밀번호박스 -->
                         <div class="minput mi2">
                             <label for="mid">비밀번호</label>
-                            <input type="password" name="mpw" id="mpw" maxlength="10" placeholder="비밀번호를 입력해주세요.">
+                            <input type="password" name="mpw" id="mpw" maxlength="10" placeholder="비밀번호를 입력해 주세요">
                         </div>
                         <!-- 버튼영역 -->
                         <div class="btnbx">
@@ -247,7 +252,8 @@
                         <!-- 기타링크 -->
                         <div class="addbx">
                             <span>
-                                <input type="checkbox" id="chkbx" name="chkbx"> <label for="chkbx">아이디저장</label>
+                                <input type="checkbox" id="chkbx" name="chkbx">
+                                <label for="chkbx">아이디저장</label>
                             </span>
                             <a href="#">아이디찾기</a> | 
                             <a href="#">비밀번호찾기</a> | 
