--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -262,9 +262,10 @@
                     <a href="#" class="abtn2 rb">
                         <img src="./img/right.png" alt="오른쪽버튼">
                     </a>
-
                 </nav>
-
+                <a href="#">
+                    <span>∨</span>
+                </a>
             </section>
             <!-- /******************************************* cont4 *******************************************/ -->
             <section class="cont4">
