--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -64,7 +64,7 @@
             <div class="gnb2">
                 <div>
                     <ul class="lb">
-                        <li><a href="#">HOME</a></li>
+                        <li><a href="./index.html">HOME</a></li>
                         <li><a href="#">수상후보작</a></li>
                     </ul>
 
