--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -87,13 +87,10 @@
 
         <section class="cont1">
             <img class="subposter" src="./img/sub1m.jpg" alt="지옥포스터">
-            <h1 id="gosub">
-                <a href="sub1.html">
-                    <img src="./img/logo.gif" alt="BIFF로고">
-                </a>
-                <a href="#">
-                    <span>∨</span>
-                </a>
+            <h1 id="title">
+                <span class="subtit">지옥
+                    <small class="entit">Hellbound</small>
+                </span>
             </h1>
         </section>
         <!-- /******************************************* cont2 *******************************************/ -->
