--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -86,12 +86,17 @@
     <div id="cont">
 
         <section class="cont1">
-            <img class="subposter" src="./img/sub1m.jpg" alt="지옥포스터">
-            <h1 id="title">
-                <span class="subtit">지옥
-                    <small class="entit">Hellbound</small>
-                </span>
-            </h1>
+            <div class="Hfilm">
+                <div class="backmain">
+                    <a class="back" href="./index.html">뒤로가기</a>
+                </div>
+                    <img class="subposter" src="./img/sub1m.jpg" alt="지옥포스터">
+                    <h1 id="title">
+                        <span class="subtit">지옥
+                            <small class="entit">Hellbound</small>
+                        </span>
+                    </h1>
+            </div>
         </section>
         <!-- /******************************************* cont2 *******************************************/ -->
     <!-- /******************************************* 하단 *******************************************/ -->
