--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -9,7 +9,22 @@
     <link rel="shortcut icon" href="./img/Biff_logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./media.css">
-    <script src="./main.js"></script>
+    <script src="./JS/main.js"></script>
+
+    <script src="./JS/jquery-autoScroll-1.0.js"></script>
+    <!-- 부드러운 스크롤 플러그인 : 제이쿼리아님! -->
+    <script src="./JS/jquery-3.6.0.min.js"></script>
+    <script src="./JS/jquery-ui.min.js"></script>
+    <script>
+        $(function () { ////// jQB ///////////////////////////////
+
+            $("a").click(function (e) {
+                e.preventDefault();
+            })
+
+        })
+    </script>
+
 </head>
 
 <body>
