--- a/001.HTML/008.VOGUE_PJ/002.site/member.html
+++ b/001.HTML/008.VOGUE_PJ/002.site/member.html
@@ -127,7 +127,7 @@
                 <div class="mwrap">
                     <!-- 입력창박스 -->
                     <div id="search">
-                        <input type="text" placeholder="Search...">
+                        <input type="text" placeholder="Search..." class="search">
                     </div>
                     <!-- 검색버튼 -->
                     <button class="scbtn fi fi-search">
