--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -139,6 +139,8 @@
                 </div>
                 <div>
                     <ul class="rb">
+                        <li></li>
+                        <li></li>
                         <li><a href="#pg3">우수출품작</a></li>
                         <li><a href="#pg4">상영시간표</a></li>
                     </ul>
@@ -153,7 +155,7 @@
     <!-- /******************************************* cont1 *******************************************/ -->
     <div id="cont">
 
-        <section class="cont1">
+        <section id="pg1" class="cont1">
             <video class="Mvideo" src="./img/BIFF2021_1080.mp4" autoplay muted loop></video>
             <h1 id="gosub">
                 <a href="sub1.html">
@@ -166,7 +168,7 @@
         </section>
         <!-- /******************************************* cont2 *******************************************/ -->
         <main class="cont ibx">
-            <section class="cont2">
+            <section id="pg2" class="cont2">
                 <h2 class="ad1">BIFF 2022 수상후보작품</h2>
 
                 <nav class="mlist">
@@ -231,7 +233,7 @@
             </section>
 
             <!-- /******************************************* cont3 *******************************************/ -->
-            <section class="cont3">
+            <section id="pg3" class="cont3">
                 <h3 class="ad2">아시아영화의 창</h3>
                 <nav class="mlist3-1">
                     <ul>
@@ -336,7 +338,7 @@
                 </a>
             </section>
             <!-- /******************************************* cont4 *******************************************/ -->
-            <section class="cont4">
+            <section id="pg4" class="cont4">
 
                 <div class="tbl_schedule_wrap">
                     <div class="pull-left">
