--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>부산국제영화제</title>
     <link rel="shortcut icon" href="./img/Biff_logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="./media.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/media.css">
     <script src="./JS/main.js"></script>
 
     <!-- 부드러운 스크롤 플러그인 : 제이쿼리아님! -->
@@ -110,12 +110,9 @@
         <section id="pg1" class="cont1">
             <video class="Mvideo" src="./img/BIFF2021_1080.mp4" autoplay muted loop></video>
             <h1 id="gosub">
-                <a href="sub1.html">
+                <a href="./sub1.html">
                     <img src="./img/logo.gif" alt="BIFF로고">
                 </a>
-                <!-- <a href="#">
-                    <span>∨</span>
-                </a> -->
             </h1>
         </section>
         <!-- /******************************************* cont2 *******************************************/ -->
@@ -179,9 +176,6 @@
                         <img src="./img/right.png" alt="오른쪽버튼">
                     </a>
                 </nav>
-                <!-- <a href="#">
-                    <span>∨</span>
-                </a> -->
             </section>
 
             <!-- /******************************************* cont3 *******************************************/ -->
@@ -285,9 +279,6 @@
                         <img src="./img/right.png" alt="오른쪽버튼">
                     </a>
                 </nav>
-                <!-- <a href="#">
-                    <span>∨</span>
-                </a> -->
             </section>
             <!-- /******************************************* cont4 *******************************************/ -->
             <section id="pg4" class="cont4">
@@ -387,11 +378,6 @@
             </section>
         </main>
         <!-- /******************************************* 하단 *******************************************/ -->
-        <!-- <div id="info">
-        <footer class="info ibx">
-
-        </footer>
-    </div> -->
         <footer id="ft" class="ft">
             <div class="footer_inner">
                 <div class="container">
