--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>부산국제영화제</title>
     <link rel="shortcut icon" href="./img/Biff_logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./sub1.css">
-    <link rel="stylesheet" href="./media.css">
-    <script src="./main.js"></script>
+    <link rel="stylesheet" href="./css/sub1.css">
+    <link rel="stylesheet" href="./css/media.css">
+    <script src="./JS/main.js"></script>
 </head>
 <body>
     <!-- ******************************************* 상단 ******************************************* -->
