--- a/010.VueJS학습/001.기초연습/vue.html
+++ b/010.VueJS학습/001.기초연습/vue.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue JS 기초</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <script>
-        
+        window.addEventListener("load", () => {
+            console.log("로딩완료!!!!!!!!!!!");
 
+            // 1. 텍스트바인딩
+            new Vue({
+                el: "#app1",
+                data: {
+                    message: "나는 프론트엔드 개발자다"
+                }
+            }); //////vue//////
+        })
     </script>
 </head>
+
 <body>
     <h1>Vue JS 기초연습</h1>
 
@@ -16,7 +28,7 @@
 
     <h2>1. 텍스트 바인딩(binding->데이터넣기!)</h2>
     <div id="app1">
-        <p></p>
+        <p>{{message}}</p>
     </div>
 
     <hr>
@@ -46,11 +58,12 @@
 
     <h2>5. 조건분기</h2>
     <div id="app5">
-        <button>변경하기</button>        
+        <button>변경하기</button>
         <p>나는 프론트엔드 개발자다!</p>
     </div>
 
 
-    
+
 </body>
+
 </html>
